--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,9 @@ body {
 .smallerText {
   font-size: calc(0.125em + 0.5vw);
 }
+.smallestText {
+  font-size: calc(0.125em + 0.25vw);
+}
 .biggerText {
   font-size: calc(0.9em + 0.5vw);
 }
@@ -177,7 +180,7 @@ body {
 }
 
 #divcontainer1 {
-  min-height: 50vh;
+  min-height: 500px;
   flex: 1;
 }
 #divcontainer2 {
@@ -201,10 +204,10 @@ body {
 }
 
 #friendimgcontainer {
-  width: 33%;
+  width: 25%;
   float: left;
   margin: 2%;
-  border-radius: 40%;
+  border-radius: 45%;
   margin-right: 8%;
 }
 
@@ -232,7 +235,7 @@ textarea {
 #submitButton {
   float: right;
   background-color: var(--col8);
-  border-radius: 24px;
+  border-radius: 25px;
   color: black;
   font-size: larger;
 }
@@ -333,7 +336,7 @@ input::-webkit-inner-spin-button {
   clear: both;
   font-weight: bold;
 }
-
+/*
 #submitbutton:hover {
   border-radius: 40vh;
   padding: 0.5vh 2vh;
@@ -342,7 +345,7 @@ input::-webkit-inner-spin-button {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: bold;
-}
+}*/
 
 .main-btn {
   border-radius: 40vh;
@@ -354,16 +357,27 @@ input::-webkit-inner-spin-button {
   font-weight: bold;
 }
 
+
 .btn-with-hover:hover {
   box-shadow: 1px 0.5px 5px antiquewhite;
   cursor: pointer;
+  font-size: calc(0.125em + 0.5vw);
 }
 
 .texthover:hover {
   font-weight: bold;
   color: var(--col8);
   cursor: pointer;
-  text-decoration: underline;
+  text-decoration: none;
+}
+.addhover:hover {
+  border-radius: 40vh;
+  padding: 0.5vh 2vh;
+  background-color: white;
+  color: var(--col1);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
 }
 
 #containposter:hover {
