Login page modified
+ Color contrast adjusted
+ Eye button repositioned correctly

--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ body{
 
 .form-box{
     width: 400px;
-    background: rgba(0,0,0,0.8);
+    background: rgba(15, 7, 6,0.8);
     margin-top:6%;
     margin-bottom: 6%;
     margin-left:2%;
