IMAGE FILE IMPORTED AND ICON CHANGED

--- a/css/navStyle.css
+++ b/css/navStyle.css
@@ -52,7 +52,7 @@ nav .nav-items li{
 }
 
 nav .nav-items .li_icons a{
-    color: brown;
+    color: #a52a2a;
     font-size: 28px;
     font-weight: 800;
     text-decoration: none;
