--- a/css/style.css
+++ b/css/style.css
@@ -97,19 +97,19 @@ body {
 
 
 .textsizeCorrect {
-  font-size: calc(0.35em + 0.5vw);
+  font-size: calc(0.55em + 0.5vw);
 }
 
 .smallerText {
-  font-size: calc(0.125em + 0.5vw);
+  font-size: calc(0.325em + 0.5vw);
 }
 
 .smallestText {
-  font-size: calc(0.125em + 0.25vw);
+  font-size: calc(0.225em + 0.45vw);
 }
 
 .biggerText {
-  font-size: calc(0.9em + 0.5vw);
+  font-size: calc(0.75em + 0.5vw);
 }
 
 .leftcol,
@@ -200,7 +200,7 @@ body {
   width: 70vw;
   margin: auto;
   margin-bottom: 0;
-  padding-top: 20px;
+  padding-top: 75px;
 }
 
 #profileImagesContainer {
@@ -285,13 +285,14 @@ body {
 }
 
 #profButtons {
-  width: 7vw;
+  width: 10vw;
   display: inline-block;
   margin: 0.5%;
   margin-bottom: 2%;
 }
 
 #divcontainer1 {
+  display: none;
   height: 500px;
   flex: 1;
   border-radius: 25px;
@@ -300,9 +301,7 @@ body {
 
 #divcontainer2 {
   flex: 3;
-  padding: 2.6%;
-  padding-bottom: 0%;
-  padding-right: 0px;
+  padding-top: 15px;
   border-radius: 25px;
 }
 
@@ -339,7 +338,8 @@ body {
   padding: 2%;
   background-color: var(--col3);
   border-color: var(--col3);
-  border-radius: 25px;
+  border-radius: 8px;
+  margin-bottom:15px;
 }
 .commentposter {
   border: solid thin;
@@ -377,7 +377,7 @@ textarea::-webkit-scrollbar {
   color: #333333;
 }
 
-#submitButton {
+#submitButton2 {
   float: right;
   background-color: brown;
   border-radius: 10px;
@@ -385,8 +385,26 @@ textarea::-webkit-scrollbar {
   font-size: larger;
   width: 4vw;
 }
+#submitButton {
+  float: right;
+  font-size: larger;
+}
 
-#profileButton,#deleteButton,#messageButton {
+.icon{
+  color: var(--col8);
+}
+.icon:hover{
+  color:antiquewhite;
+}
+
+.react_icon{
+  color: antiquewhite;
+}
+.react_icon:hover{
+  color:brown;
+}
+
+#profileButton {
   float: right;
   background-color: var(--col8);
   border-radius: 50%;
@@ -399,15 +417,14 @@ textarea::-webkit-scrollbar {
 #statusBar {
   /*margin-top: 5%;*/
   background-color: var(--col3);
-  padding: 2.5%;
-  padding-bottom: 0;
-  padding-top: 1%;
-  padding-right: 1%;
+  padding: 2%;
+  padding-top: 2%;
+  padding-right: 2%;
   overflow-y: scroll;
   margin-bottom: 0;
-  height: 100vh;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
+  height: 72vh;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   width: 100%;
 }
 
@@ -419,6 +436,7 @@ textarea::-webkit-scrollbar {
   overflow-y: scroll;
 }
 #textPart{
+  margin-top: 5%;
   margin-bottom: 0;
   margin-left: 2%;
   white-space: pre-wrap;
@@ -451,6 +469,7 @@ textarea::-webkit-scrollbar {
 }
 
 #condivcontainer1 {
+  display: none;
   min-height: 50vh;
   flex: 1;
   padding-top: 5%;
@@ -573,9 +592,18 @@ input::-webkit-inner-spin-button {
   font-size: calc(0.25em + 0.5vw);
 }
 
+.texthover2{
+  color: brown;
+  font-size: 2vw;
+}
+.texthover2:hover{
+  color:  antiquewhite;
+}
+
 .texthover:hover {
   font-weight: bold;
-  color: var(--col8);
+  
+  color: brown;
   cursor: pointer;
   text-decoration: none;
 }
@@ -618,4 +646,65 @@ input::-webkit-inner-spin-button {
 
 .reactor {
   padding-top: 125%
+}
+
+.make-white{
+  color: var(--col8);
+}
+.make-white:hover{
+  color:antiquewhite;
+}
+
+.hover-underline {
+  display: inline-block;
+  position: relative;
+}
+
+.hover-underline:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: antiquewhite;;
+  transform-origin: bottom center;
+  transition: transform 0.25s ease-out;
+
+}
+
+.hover-underline:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom center;
+}
+
+
+@media (max-width: 980px){
+  #bodyContainer {
+    min-height: 55vh;
+    width: 90vw;
+    margin: auto;
+    margin-bottom: 0;
+    padding-top: 75px;
+  }
+  #condivcontainer2 {
+    min-height: 400px;
+    flex: 1;
+    padding: 0%;
+    padding-right: 0px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-radius: 25px;
+  }
+  .texthover2{
+    color: brown;
+    font-size: 2vw;
+  }
+  #profButtons {
+    width: 15vw;
+    display: inline-block;
+    margin: 0.5%;
+    margin-bottom: 2%;
+  }
 }
