--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ body{
 }
 
 .google{
-    font-size: 4vw;margin-right:3%;
+    font-size: 60px;margin-right:3%;
 }
 .facebook{
     font-size: 4vw;margin-right:3%;
