--- a/css/chat.css
+++ b/css/chat.css
@@ -31,7 +31,6 @@ body{
 .wrapper{
   background:  #2e1512;
   color: #fff;
-  max-width: 450px;
   width: 100%;
   border-radius: 16px;
   box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),0 32px 64px -48px rgb(0, 0, 0, 0.5);
@@ -265,25 +264,22 @@ body{
   display: flex;
   align-items: center;
   padding: 18px 30px;
+  padding-top:12px;
+  margin-top:0;
+  width: 55vw;
 }
-.chat-area header .back-icon{
-  color: #9a463d;
-  font-size: 18px;
-}
-.chat-area header img{
-  height: 45px;
-  width: 45px;
-  margin: 0 15px;
-}
+
+
 .chat-area header .details span{
   font-size: 17px;
   font-weight: 500;
 }
 .chat-box{
+ 
   position: relative;
-  min-height: 500px;
-  max-height: 500px;
+  height: 70vh;
   overflow-y: auto;
+  padding-top:0;
   padding: 10px 30px 20px 30px;
   background: #111;
   box-shadow: inset 0 32px 32px -32px rgb(0 0 0 / 5%),
