--- a/css/admin.css
+++ b/css/admin.css
@@ -262,7 +262,7 @@ th,td{
 }
 
 .container .content .cards{
-    visibility: visible;
+    /*visibility: visible;*/
     padding:20px 15px;
     display: flex;
     align-items: center;
@@ -295,23 +295,26 @@ th,td{
     flex-wrap: wrap;
 }
 .container .content .content-2.hide{
-    visibility: collapse ;
+    /*visibility: collapse ;*/
     
 }
 
 .container .content .content-2 .recent-feedbacks{
     min-width: 55vw;
-    flex: 1;
+    /*flex: 1;*/
     background: white;
     margin: 0 25px 25px 25px;
     box-shadow: 0 4px 8px rgba(255,255,255,0.4), 0 6px 20px 0 rgba(255,255,255,0.29);
 }
 .container .content .content-2 .recent-feedbacks.show{
-    visibility: visible;
+    /*visibility: visible;*/
+    display: show;
+
 }
 
 .container .content .content-2 .recent-feedbacks.hide{
-    visibility: collapse;
+    /*visibility: collapse;*/
+    display: none;
 }
 
 .container .content .content-2 .new-users{
@@ -323,8 +326,10 @@ th,td{
 }
 
 .container .content .content-2 .new-users.show{
-    visibility: visible;
+    /*visibility: visible;*/
+    display: show;
 }
 .container .content .content-2 .new-users.hide{
-    visibility: collapse;
+    /*visibility: collapse;*/
+    display: none;
 }
