--- a/css/admin.css
+++ b/css/admin.css
@@ -189,61 +189,21 @@ th,td{
 
 }
 
-.container .header{
-    position:fixed;
-    top:0;
-    right: 0;
-    width: 75vw;
-    height: 10vh;
-    background: white;
-    display: flex;
+.welcome{
+    display: block;
+    color: brown;
     align-items: center;
-    justify-content: center;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-
-.container .header .nav{
-    width: 90%;
-    display: flex;
-    align-items: center;
+    align-self: center;
+    align-content: center;
     text-align: center;
-    justify-content: space-between;
+    position: fixed;
+    top: 40%;
+    left: 50%;
 }
 
-.container .header .nav .search{
-    
-    flex: 3;
-    display: flex;
-    justify-content: center;
-    background: white;
-}
-
-.container .header .nav .search input[type=text]{
-    border:none;
-    background:#111;
-    color:#fff;
-    padding : 10px;
-    width: 50%;
-}
-.container .header .nav .search button{
-    width: 40px;
-    height: 40px;
-    border:none;
-    background: brown;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.container .header .nav .search button i{
-    width: 30px;
-    height: 30px;
-    border: none;
-    
-}
-.container .header .nav .user{
-    flex: 1;
+.welcome.hide{
+    display: none;
+    color: transparent;
 }
 
 
